--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,15 +12,22 @@
     "@remix-run/node": "2.10.0",
     "@remix-run/react": "2.10.0",
     "@remix-run/server-runtime": "2.10.0",
+    "@tailwindcss/vite": "^4.1.7",
     "@vercel/analytics": "^1.2.2",
     "@vercel/remix": "2.10.0",
+    "daisyui": "^5.0.37",
     "isbot": "^4",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
+    "react-leaflet": "^4",
+    "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
     "@remix-run/dev": "2.10.0",
     "@remix-run/eslint-config": "2.10.0",
+    "@types/leaflet": "^1.9.18",
     "@types/react": "^19.1.5",
     "@types/react-dom": "^18.2.7",
     "eslint": "^8.38.0",
