--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,12 +13,14 @@
     "@remix-run/react": "2.10.0",
     "@remix-run/server-runtime": "2.10.0",
     "@tailwindcss/vite": "^4.1.7",
+    "@uidotdev/usehooks": "^2.4.1",
     "@vercel/analytics": "^1.2.2",
     "@vercel/remix": "2.10.0",
     "daisyui": "^5.0.37",
     "isbot": "^4",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^4",
