--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
     "@remix-run/react": "2.10.0",
     "@remix-run/server-runtime": "2.10.0",
     "@tailwindcss/vite": "^4.1.7",
+    "@types/react-leaflet": "^2.8.3",
     "@uidotdev/usehooks": "^2.4.1",
     "@vercel/analytics": "^1.2.2",
     "@vercel/remix": "2.10.0",
@@ -24,13 +25,14 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^4",
-    "tailwindcss": "^4.1.7"
+    "react-lorem-ipsum": "^1.4.10",
+    "tailwindcss": "^4.1.7",
+    "y": "^0.3.2"
   },
   "devDependencies": {
     "@remix-run/dev": "2.10.0",
     "@remix-run/eslint-config": "2.10.0",
-    "@types/leaflet": "^1.9.18",
-    "@types/react": "^19.1.5",
+    "@types/react": "^18",
     "@types/react-dom": "^18.2.7",
     "eslint": "^8.38.0",
     "typescript": "^5.1.6",
