--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,6 +17,7 @@
     "@uidotdev/usehooks": "^2.4.1",
     "@vercel/analytics": "^1.2.2",
     "@vercel/remix": "2.10.0",
+    "airtable": "^0.12.2",
     "daisyui": "^5.0.37",
     "isbot": "^4",
     "leaflet": "^1.9.4",
